[gd_scene format=3 uid="uid://dialogue_box_scene"]

[ext_resource type="Script" path="res://Scripts/dialogue_box.gd" id="1_dialogue"]

[node name="DialogueBox" type="CanvasLayer"]
layer = 10
script = ExtResource("1_dialogue")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="Background" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.7)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = ""
fit_content = true
scroll_active = false

[node name="PortraitContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 0

[node name="PlaceholderBG" type="ColorRect" parent="PanelContainer/MarginContainer/HBoxContainer/PortraitContainer"]
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Portrait" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/PortraitContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.03
autostart = false

[node name="DisplayTimer" type="Timer" parent="."]
one_shot = true
autostart = false

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
